{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 55,
  "lineage": "cd077c93-9eb6-9e75-fb6c-b3eeeb3c801f",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f0478228932d57d",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0bd913125fc1b3914",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0bd913125fc1b3914",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3cc36d2274acf70",
            "private_dns": "ip-10-0-0-177.eu-west-1.compute.internal",
            "private_ip": "10.0.0.177",
            "public_ip": "52.210.105.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ac383d70cc2167d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0964dfa85cc8f41e3",
            "tags": {
              "Name": "T-app-lizzy"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08de16dbce20c18bc"
            ]
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.app.aws_subnet.app",
            "module.db.aws_instance.db",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-049b0eb3c48e9b0e3",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0285bba055a50efa3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0285bba055a50efa3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-08e2bd93045acccd0",
            "private_dns": "ip-10-0-1-174.eu-west-1.compute.internal",
            "private_ip": "10.0.1.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ee5ebbd867f9a90d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f12febc5e4ba98f3",
            "tags": {
              "Name": "T-app-lizzy-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5a7de7e27065f89"
            ]
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-067041a5d16ad8c11",
            "owner_id": "135928476890",
            "tags": {
              "Name": "T-app-lizzy"
            },
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-029064a37883bd910",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0964dfa85cc8f41e3"
            ],
            "tags": {
              "Name": "T-app-lizzy"
            },
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "id": "acl-00cca314e8fb1a1f1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0f12febc5e4ba98f3"
            ],
            "tags": {
              "Name": "T-app-lizzy-db"
            },
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-086b20ed707f0382c",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067041a5d16ad8c11",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "T-app-lizzy-public"
            },
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0868b730af478ec55",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "T-app-lizzy-db-private"
            },
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d213cf18a6f7e13",
            "route_table_id": "rtb-086b20ed707f0382c",
            "subnet_id": "subnet-0964dfa85cc8f41e3"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_internet_gateway.app",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ac5845bff01fd76",
            "route_table_id": "rtb-0868b730af478ec55",
            "subnet_id": "subnet-0f12febc5e4ba98f3"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.db.aws_route_table.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-08de16dbce20c18bc",
            "description": "T-app-lizzy access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08de16dbce20c18bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "T-app-lizzy",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "T-app-lizzy"
            },
            "timeouts": null,
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0e5a7de7e27065f89",
            "description": "T-app-lizzy db access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5a7de7e27065f89",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08de16dbce20c18bc"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "T-app-lizzy-db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "T-app-lizzy-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0964dfa85cc8f41e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0964dfa85cc8f41e3",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "T-app-lizzy"
            },
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0f12febc5e4ba98f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f12febc5e4ba98f3",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "T-app-lizzy-db"
            },
            "vpc_id": "vpc-08196ce5ce9ec58fd"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-08196ce5ce9ec58fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a66e1c4685871e84",
            "default_route_table_id": "rtb-0cb821ed69dd53328",
            "default_security_group_id": "sg-0bf610ed016ded128",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08196ce5ce9ec58fd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cb821ed69dd53328",
            "owner_id": "135928476890",
            "tags": {
              "Name": "T-app-lizzy"
            }
          }
        }
      ]
    }
  ]
}